Fix width for mobile nav collapse.

--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -92,7 +92,7 @@
 }
 
 @media (max-width: 400px) {
-  .showOptions {
+  .showOptions, .hidden {
     right: 0;
     width: 50%;
   }
